# STOCHASTIC_PREDICTOR

./: .MIGRATION_COMPLETE.py  .env.example  .gitignore  AUDIT_AUTOTUNING_SESSION_2026-02-19.md  AUDIT_FORMULA_IMPLEMENTATION_COMPLETE.md  AUDIT_FORMULA_INTERCONNECTION_FINAL.md  AUDIT_SIGNATURE_ALIGNMENT_EXECUTIVE_SUMMARY.md  AUDIT_SPEC_COMPLIANCE_2026-02-19.md  AUDIT_SUMMARY_INTERCONNECTION.md  CHANGELOG.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  FINAL_COMPLIANCE_AUDIT.md  IMPLEMENTATION_PLAN.md  LATEX_AUDIT_EXECUTIVE_SUMMARY.md  LATEX_HYPERLINKS_REMEDIATION.md  LICENSE  MIGRATION_AUTOTUNING_v1.0.md  README.md  RELEASE_NOTES.md  TESTING.md  TESTING_FLOW_ANALYSIS.md  TODO_IMPLEMENTATION_PLAN.md  config.toml  pyproject.toml  requirements.txt  verify_environment.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  test_meta_optimization.yml
Doc/: README.md  compile.sh  requirements.txt
Python/: __init__.py  config.toml.bak  requirements.txt
Python/api/: __init__.py  config.py  prng.py  schemas.py  state_buffer.py  types.py  validation.py  warmup.py
Python/core/: __init__.py  fusion.py  meta_optimizer.py  orchestrator.py  sinkhorn.py
Python/io/: __init__.py  config_mutation.py  credentials.py  dashboard.py  loaders.py  snapshots.py  telemetry.py  validators.py
Python/kernels/: __init__.py  base.py  kernel_a.py  kernel_b.py  kernel_c.py  kernel_d.py
Test/: conftest.py  production_config.toml  pytest.ini  requirements.txt  run_tests.py  test_config.yaml
Test/framework/: __init__.py  discovery.py  generator.py  inspector.py  reports.py
Test/reports/: code_alignement_last.md  code_lint_last.md  code_structure_last.md  dependency_check_last.md  summary_last.md  tests_generation_last.md
Test/scripts/: __init__.py  (+9 more)
benchmarks/: bench_adaptive_vs_fixed.py
development/: MATHEMATICAL_FUNCTION_MAPPING.md
doc/: .latexmkrc  IMPLEMENTATION_TASKS_IO.md  LATEX_WORKSHOP_SETUP.md  Predictor_Estocastico_API_Python.tex  Predictor_Estocastico_IO.tex  Predictor_Estocastico_Implementacion.tex  Predictor_Estocastico_Pruebas.tex  Predictor_Estocastico_Python.tex  Predictor_Estocastico_Teoria.tex  Predictor_Estocastico_Tests_Python.tex  README.md  compile.sh
examples/: README.md  run_deep_tuning.py
reports/: README.md
scripts/: README_verify_alignment.md  apply_latex_hyperlinks.py  migrate_config.py  verify_alignment.sh
stochastic_predictor/: __init__.py  config.py
tests/: __init__.py  code_alignement.py  conftest.py
(+147 files in other folders)
