[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stochastic-predictor"
version = "0.0.1"
description = "Universal Stochastic Predictor - Sistema de predicción estocástica con análisis multifractal y transporte óptimo. Fase de especificación completa + implementación desde cero."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Consorcio de Desarrollo de Meta-Predicción Adaptativa"}
]
keywords = [
    "stochastic-processes",
    "prediction",
    "multifractal-analysis",
    "optimal-transport",
    "jax",
    "wavelets",
    "rough-paths",
    "time-series"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "equinox>=0.11.0",
    "diffrax>=0.4.0",
    "jaxtyping>=0.2.0",
    "ott-jax>=0.4.0",
    "pywavelets>=1.4.0",
    "scipy>=1.10.0",
    "signax>=0.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/obosio/STOCHASTIC_PREDICTOR"
Documentation = "https://github.com/obosio/STOCHASTIC_PREDICTOR/tree/main/doc"
Repository = "https://github.com/obosio/STOCHASTIC_PREDICTOR"
Issues = "https://github.com/obosio/STOCHASTIC_PREDICTOR/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["stochastic_predictor*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
